--- a/roles/docker/tasks/install.yml
+++ b/roles/docker/tasks/install.yml
@@ -57,3 +57,8 @@
         src: "/usr/local/bin/docker-compose"
         dest: "/usr/bin/docker-compose"
         state: link
+    
+    - name: Install Unzip
+      apt:
+        name: unzip
+        state: present
