--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -2,4 +2,6 @@
 - block:
     - import_tasks: install.yml
     - import_tasks: media-centre.yml
+    - import_tasks: downloader.yml
+    - import_tasks: photoprism.yml
     
