--- a/roles/docker/tasks/downloader.yml
+++ b/roles/docker/tasks/downloader.yml
@@ -4,11 +4,19 @@
       copy:
         src: ../files/downloader
         dest: ~/stacks/
+    
+    - name: Create config directories
+      file:
+        path: "{{ item }}"
+        state: directory
+      loop:
+        - ~/appdata/transmission
+        - ~/appdata/pyload
 
     - name: Get transmission settings
       get_url: 
-        url: https://github.com/docker/compose/releases/download/v2.12.2/docker-compose-Linux-x86_64 
-        dest: ~/appdata/transmission
+        url: https://raw.githubusercontent.com/aGhosh02/ansible-proxmox/master/roles/docker/files/downloader/settings.json
+        dest: ~/appdata/transmission/settings.json
 
     - name: Downloader Setup
       shell: cd ~/stacks/downloader && docker-compose up -d
