--- a/roles/docker/files/network/docker-compose.yml
+++ b/roles/docker/files/network/docker-compose.yml
@@ -26,3 +26,9 @@ services:
       - '81:81'
       - '444:443'
     restart: unless-stopped
+  cloudflare:
+    image: 'cloudflare/cloudflared:latest'
+    container_name: cloudflare
+    restart: unless-stopped
+    command: tunnel --no-autoupdate run --token eyJhIjoiZmE4ZjFmOTAxYjFjYTA3YjI5NDg3ZGM2YmVkMGEyNjkiLCJ0IjoiNjNkZTViYWMtMTVjOS00ODc4LWEwMWItNzNiYmVlODFmNjcxIiwicyI6IlpXTTBOV1EzWWpRdE9EZzJNUzAwWTJVNUxUaG1NbVV0TTJNNU1EY3hNR0l3WXpkaiJ9
+  
