--- a/roles/docker/files/photoprism/docker-compose.yml
+++ b/roles/docker/files/photoprism/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   photoprism:
     ## Use photoprism/photoprism:preview for testing preview builds:
     image: photoprism/photoprism:latest
+    container_name: photoprism
     restart: unless-stopped
     stop_grace_period: 10s
     depends_on:
@@ -80,6 +81,7 @@ services:
   ## see https://docs.photoprism.app/getting-started/faq/#should-i-use-sqlite-mariadb-or-mysql
   mariadb:
     image: mariadb:10.11
+    container_name: mariadb
     ## If MariaDB gets stuck in a restart loop, this points to a memory or filesystem issue:
     ## https://docs.photoprism.app/getting-started/troubleshooting/#fatal-server-errors
     restart: unless-stopped
