--- a/roles/docker/tasks/network.yml
+++ b/roles/docker/tasks/network.yml
@@ -4,6 +4,11 @@
       lineinfile:
         path: /etc/systemd/resolved.conf
         line: DNSStubListener=no
+    
+    - name: Restart service systemd-resolved
+      ansible.builtin.systemd_service:
+        state: restarted
+        name: systemd-resolved
 
     - name: Copy docker-compose
       copy:
@@ -26,9 +31,25 @@
       loop:
         - nginx
     
+    - name: Get nginx proxy configs
+      raw: find ~/appdata/nginx/data/nginx/proxy_host/ -type f -name "*.conf"
+      register: proxies
+
+    - name: Update new ip to nginx
+      replace: dest={{item}} regexp="10.0.100.3" replace="10.0.200.2"
+      with_items: "{{ proxies.stdout_lines }}"
+    
+    - name: Update new ip to nginx
+      replace: dest={{item}} regexp="10.0.100.1" replace="10.0.200.1"
+      with_items: "{{ proxies.stdout_lines }}"
+    
+    - name: Update new ip to nginx
+      replace: dest={{item}} regexp="10.0.100.2" replace="10.0.200.2"
+      with_items: "{{ proxies.stdout_lines }}"
+    
     - name: Get bind9 config
       get_url: 
-        url: https://raw.githubusercontent.com/aGhosh02/ansible-proxmox/master/roles/docker/files/bind9-config/{{ item }}
+        url: https://raw.githubusercontent.com/aGhosh02/ansible-proxmox/master/roles/docker/files/network/bind9-config/{{ item }}
         dest: ~/appdata/bind9/{{ item }}
       loop:
         - named.conf
