--- a/roles/docker/tasks/homeassistant.yml
+++ b/roles/docker/tasks/homeassistant.yml
@@ -14,15 +14,9 @@
     
     - name: Copy homeassistant config
       copy:
-        src: /mnt/hdd1tb/Backup/appdata/homeassistant-2/
-        dest: ~/appdata/homeassistant/config/
+        src: /mnt/hdd1tb/Backup/appdata/homeassistant/
+        dest: ~/appdata/homeassistant/
         remote_src: yes
-    
-    - name: Copy mqtt config
-      copy:
-        src: /mnt/hdd1tb/Backup/appdata/mqtt/
-        dest: ~/appdata/homeassistant/mqtt/
-        remote_src: yes
-    
+        
     - name: Homeassistant Setup
       shell: cd ~/stacks/homeassistant && docker-compose up -d
