--- a/roles/docker/files/media-centre/docker-compose.yml
+++ b/roles/docker/files/media-centre/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - ${APPDATA}/sonarr:/config
       - ${HDD}/tv:/tv #optional
       - ${HDD}/downloads:/downloads #optional
+    networks:
+      - internal
     ports:
       - 8989:8989
     restart: unless-stopped
@@ -25,6 +27,8 @@ services:
       - ${APPDATA}/radarr:/config
       - ${HDD}/movies:/movies #optional
       - ${HDD}/downloads:/downloads #optional
+    networks:
+      - internal
     ports:
       - 7878:7878
     restart: unless-stopped
@@ -39,6 +43,8 @@ services:
       - ${APPDATA}/bazarr:/config
       - ${HDD}/movies:/movies #optional
       - ${HDD}/tv:/tv #optional
+    networks:
+      - internal
     ports:
       - 6767:6767
     restart: unless-stopped
@@ -51,6 +57,8 @@ services:
       - TZ=${TZ}
     volumes:
       - ${APPDATA}/prowlarr:/config
+    networks:
+      - internal
     ports:
       - 9696:9696
     restart: unless-stopped
@@ -66,6 +74,8 @@ services:
       - ${APPDATA}/jellyfin:/config
       - ${HDD}/movies:/data/movies #optional
       - ${HDD}/tv:/data/tvshows #optional
+    networks:
+      - internal
     ports:
       - 8096:8096
       - 8920:8920 #optional
@@ -80,6 +90,11 @@ services:
       - LOG_HTML=false
       - CAPTCHA_SOLVER=none
       - TZ=${TZ}
+    networks:
+      - internal
     ports:
       - 8191:8191
     restart: unless-stopped 
+networks:
+    internal:
+      driver: bridge
