--- a/roles/docker/files/utils/docker-compose.yml
+++ b/roles/docker/files/utils/docker-compose.yml
@@ -27,3 +27,21 @@ services:
       WATCHTOWER_CLEANUP: "true"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
+  vaultwarden:
+    container_name: vaultwarden
+    image: vaultwarden/server:latest
+    restart: unless-stopped
+    volumes:
+      - ${APPDATA}/vaultwarden/:/data/
+    ports:
+      - 8523:80
+    environment:
+      - DOMAIN=https://vault.arghyaghosh.cloud
+      - LOGIN_RATELIMIT_MAX_BURST=10
+      - LOGIN_RATELIMIT_SECONDS=60
+      - ADMIN_RATELIMIT_MAX_BURST=10
+      - ADMIN_RATELIMIT_SECONDS=60
+      - ADMIN_TOKEN=aRG#yaG#os#0205
+      - SENDS_ALLOWED=true
+      - EMERGENCY_ACCESS_ALLOWED=true
+      - WEB_VAULT_ENABLED=true
